--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^6.19.1",
     "@stripe/stripe-js": "^8.6.0",
@@ -18,12 +19,14 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-auth": "^5.0.0-beta.30",
     "openai": "^6.15.0",
     "pdf-lib": "^1.17.1",
     "prisma": "^6.19.1",
     "puppeteer": "^24.34.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.6.0",
     "sharp": "^0.34.5",
     "stripe": "^20.1.0",
     "uuid": "^13.0.0",
