fix: Store images permanently instead of OpenAI temp URLs - New imageStorage.ts lib to download and store images locally - Updated generate-images, generate, and regenerate endpoints - Images stored in /public/images/books/<bookId>/ - Fixes image display issue after URL expiration

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@
 .DS_Store
 *.pem
 
+# generated images (stored locally)
+/public/images/books/*
+!/public/images/books/.gitkeep
+
 # debug
 npm-debug.log*
 yarn-debug.log*
